--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-<DOCTYPE html>
-  <!DOCTYPE html>
+<!DOCTYPE html>
   <html lang="en" dir="ltr">
     <head>
-      <meta charset="utf-8">
+      <meta charset="UTF-8">
       <title>CatPhotoApp</title>
     </head>
     <body>
